test/types/scalar/bradc/valAsType.good
valAsType.chpl:1: error: syntax error near ';'
valAsType.chpl:2: error: syntax error near ';'
